# MotionSenseHRV-BioImpedance-Interface

./: .gitignore  BioImpedance.csv  BluetoothPacket_HRV_Gen2.xlsx  README.md  new_format.xlsx  previous_format.xlsx
BluetoothReciever/: MotionSenseCollection.py  ReadMe.md  environment.bat  requirements.txt  requirements_stable.txt  run.bat
BluetoothReciever/dat3/LeftMotionSense2/: Acelorometer25-09-2023-at09-56.csv  PPG25-09-2023-at09-56.csv
BluetoothReciever/dat3/RightMotionSense2/: Acelorometer25-09-2023-at09-56.csv  PPG25-09-2023-at09-56.csv
BluetoothReciever/data/: log.txt
BluetoothReciever/data/LeftMotionSense2/: Acelorometer.csv  PPG.csv
BluetoothReciever/data/RightMotionSense2/: PPG.csv
BluetoothReciever/data5/LeftMotionSense2/: Acelorometer25-09-2023-at10-53.csv  ENMO25-09-2023-at10-53.csv  PPG25-09-2023-at10-53.csv
BluetoothReciever/data5/RightMotionSense2/: Acelorometer25-09-2023-at10-53.csv  ENMO25-09-2023-at10-53.csv  PPG25-09-2023-at10-53.csv
BluetoothReciever/data6/LeftMotionSense2/: Acelorometer25-09-2023-at11-31.csv  ENMO25-09-2023-at11-31.csv  PPG25-09-2023-at11-31.csv
BluetoothReciever/data6/RightMotionSense2/: Acelorometer25-09-2023-at11-31.csv  ENMO25-09-2023-at11-31.csv  PPG25-09-2023-at11-31.csv
BluetoothReciever/data_collection/: AutoEncoder_ppg_test.py  bluetooth_reciver.py  device_setup.py  lsl_transmission.py  offline_graph_generation.py
BluetoothReciever/gui/: gui.py
ZephrNrfDataCollection/: CMakeLists.txt  README.rst  prj.conf
ZephrNrfDataCollection/src/: BLEService.cc  BLEService.h  batteryMonitor.cc  imuSensor.cc  imuSensor.h  main.cc  orientation.cc  output_handler.cc  output_handler.h  ppgSensor.cc  ppgSensor.h
ZephrNrfOnDeviceApplication/: CMakeLists.txt  nrf5340pdk_nrf5340_cpuapp.overlay  prj.conf
ZephrNrfOnDeviceApplication/src/: BLEService.cc  batteryMonitor.h  battery_service.h  common.h  constants.cc  imuSensor.cc  orientation.cc
